# nova-quiz

./: README.md  buildscript.sh  docker-compose.yml
.github/workflows/: deployment.yml
server/: .gitignore  Dockerfile  pyproject.toml  pyrightconfig.json  requirements.txt
server/config/: settings.py  urls.py
server/quiz/: admin.py  models.py  serializer.py  views.py
server/quiz/migrations/: 0001_initial.py  0002_answer_alter_question_options_and_more.py  0003_remove_question_correct_answer_and_more.py  0004_rename_correct_answer_question_correct.py
web/: Dockerfile  nginx.conf  package-lock.json  package.json
web/src/: App.tsx  interface.tsx
