[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["c0mrade <shairbekov_bakyt@zeonithub.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.4"
djangorestframework = "^3.14.0"
django-cors-headers = "^3.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
